# CG

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  catmull.cpp  catmull.h  cmake_install.cmake  engine  engine.cpp  generator  generator.cpp  limpo.gitignore  sistema_solar.xml  utils.h
3d/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  saturn_ring.3d  sphere.3d  sphere_1_10_10.3d  sphere_1_8_8.3d  stars.3d  teapot.3d
test_files_phase_4/: test_4_6.xml
